# orca

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  TODO.md  install.sh  orca.toml.example
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: design.md  design.zh-CN.md
docs/plans/: 2026-04-13-orca-v1.md
src/: config.rs  escalation.rs  isolation.rs  lib.rs  main.rs  mcp.rs  protocol.rs  types.rs
src/cli/: daemon_cmd.rs  mod.rs  plan_cmd.rs  review_cmd.rs  setup_cmd.rs  task_cmd.rs  worker_cmd.rs
src/daemon/: escalation_router.rs  executor.rs  mod.rs  scheduler.rs  server.rs  state.rs
src/terminal/: ghostty.rs  ghostty_origin.rs  iterm.rs  manual.rs  mod.rs
src/worker/: agents_md_template.txt  codex.rs  mod.rs
tests/: codex_worker_test.rs  config_test.rs  e2e_test.rs  escalation_test.rs  executor_test.rs  isolation_test.rs  protocol_test.rs  scheduler_test.rs  state_test.rs  types_test.rs
