[package]
name = "orca"
version = "0.1.0"
edition = "2021"
description = "Multi-agent orchestrator: Claude Code brain + Codex workers"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
dirs = "6"
async-trait = "0.1"
rmcp = { version = "0.1", features = ["server", "transport-io"] }

[dev-dependencies]
tempfile = "3"
assert_matches = "1.5"
tokio-test = "0.4"
